deploy/k8s/00-base.yaml
# Namespace del despliegue OrquestaRT
apiVersion: v1
kind: Namespace
metadata:
  name: orquesta-rt
  labels:
    app.kubernetes.io/part-of: orquesta-rt
